--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,8 @@
 psutil==5.9.5
 requests==2.31.0
 schedule==1.2.0
-pandas==2.0.3
-matplotlib==3.7.2
+pandas>=2.3.0
+matplotlib>=3.10.0
 flask==3.0.0
 flask-cors==4.0.0
 reportlab==4.0.7
